<resources>
    <string name="title_intro_activity">G202</string>
    <string name="intro_activity_description">Endless possibilities with programs.</string>
    <string name="submit">Submit</string>
    <string name="app_name">MobileApplicationFinal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login">Log In</string>
    <string name="title_welcome_back">Welcome Back!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="choose_a_business_icon">Choose A Business Icon</string>
    <string name="choose_a_business_background">Choose A Business Background</string>
    <string name="business_icon_description">It uploads a business icon.</string>
    <string name="business_background_description">It uploads a business background.</string>
    <string name="organization_name">Organization Name</string>
    <string name="organization_type_hint">Organization Type</string>
    <string-array name="organization_type_array">
        <item>Environmental</item>
        <item>Educational</item>
        <item>Healthcare</item>
        <item>Arts and Culture</item>
        <item>Community Development</item>
    </string-array>
    <string name="organization_description">Put a short description about your organization\'s mission and vision</string>
    <string name="organization_address">Organization Address</string>
    <string name="organization_social_media_profiles">Social Media Profiles</string>
    <string name="program_categories">Program Categories of Interest</string>
    <string name="audience_type">Audience Type</string>
    <string name="title_activity_main_dashboard">main_dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_forum">Forum</string>
    <string name="title_milestones">Milestones</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_description">Mission:
        \nLorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed porta mauris. Ut tempus elementum risus eu accumsan. Pellentesque sit amet libero at diam pharetra varius at non augue. Class aptent taciti.
        \n
        \nVision:
        \nDuis eget odio sed sapien finibus rutrum. Nullam scelerisque magna quam, sed faucibus est accumsan ac. Ut accumsan arcu erat. Morbi ac turpis sodales, hendrerit lacus id, elementum elit. Curabitur ultricies purus.</string>
    <string name="profile_activities">Activities</string>
    <string name="profile_events">Events</string>
    <string name="profile_links">Links</string>
    <string name="searchbar_hint">Search</string>
    <string name="forum_name">Forum Name</string>
    <string name="forum_welcome"><u>Welcome to the Community Forum</u></string>
    <string name="forum_description"><i>Join us in discussing our programs,
        sharing resources,
        and engaging with fellow members to promote positive change in our community.</i></string>
    <string name="title_community_conversations">Community Conversations</string>
    <string name="community_conversation_secondary_text"><i>Share your thoughts and ideas related to our mission and impact.</i></string>
    <string name="title_success_stories">Success Stories</string>
    <string name="success_stories_secondary_text"><i>Share your successes and highlight positive outcomes from our initiatives!</i></string>
    <string name="title_volunteer_opportunities">Volunteer Opportunities</string>
    <string name="volunteer_opportunities_secondary_text"><i>Post and find current volunteer openings and needs.</i></string>
    <string name="title_event_feedback">Event Feedback</string>
    <string name="event_feedback_secondary_text"><i>Share your experiences and suggestions for past events!</i></string>
    <string name="engagement_badges_name">Engagement Badges</string>
    <string name="milestones_name">Milestones</string>
    <string name="new_member_name">New Member</string>
    <string name="first_post_name">First Post</string>
    <string name="daily_visitor_name">Daily Visitor</string>
    <string name="helpful_user_name">Helpful User</string>
    <string name="contribution_badges_name">Contribution Badges</string>
    <string name="volunteer_hero_name">Volunteer Hero</string>
    <string name="event_attendee_name">Event Attendee</string>
    <string name="fundraiser_name">Fundraiser</string>
    <string name="content_contributor_name">Content Contributor</string>
    <string name="awareness_badges_name">Awareness Badges</string>
    <string name="awareness_advocate_name">Awareness Advocate</string>
    <string name="survey_star_name">Survey Star</string>
    <string name="workshop_warrior_name">Workshop Warrior</string>
    <string name="awareness_contributor_name">Awareness Contributor</string>
</resources>
