<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/layout_border">


        <ImageView
            android:id="@+id/main_logo_image_view"
            android:layout_width="224dp"
            android:layout_height="224dp"
            android:layout_marginTop="64dp"

            android:background="@drawable/logo_border"
            android:src="@drawable/main_logo_no_bg" />

        <TextView
            android:id="@+id/login_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/title_login"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_welcome_back_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/title_welcome_back"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="272dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/badge_layout_border"
            android:drawableStart="@drawable/person_24px"

            android:drawablePadding="8dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"

            android:paddingHorizontal="16dp"
            android:selectAllOnFocus="true"

            />

        <EditText
            android:id="@+id/password"
            android:layout_width="272dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/badge_layout_border"
            android:drawableStart="@drawable/lock_24px"

            android:drawablePadding="8dp"
            android:hint="@string/prompt_password"

            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"

            android:text="@string/action_sign_in"

            android:layout_marginHorizontal="106dp"

            />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>