<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forum.ForumFragment"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/forum_top"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        android:padding="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_profile_picture_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerInside"
            tools:src="@drawable/person_24px_white"
            android:background="@drawable/circle_border"/>

        <TextView
            android:id="@+id/top_profile_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"

            android:text="@string/profile_name"
            android:textColor="@color/main_foreground"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/forum_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forum_top"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/forum_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="96dp">


            <TextView
                android:id="@+id/forum_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="40dp"

                android:text="@string/forum_name"
                android:textAlignment="center"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forum_welcome_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="40dp"

                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/forum_welcome" />

            <TextView
                android:id="@+id/forum_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="40dp"

                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/forum_description" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/community_conversations_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">


                <LinearLayout
                    android:id="@+id/community_conversations_card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_community_conversations"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/community_conversation_secondary_text"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>